--- a/locale/flarum-statistics.yml
+++ b/locale/flarum-statistics.yml
@@ -9,12 +9,12 @@ flarum-statistics:
 
     # These translations are used in the Statistics dashboard widget.
     statistics:
-      active_users_text: "{count} active"
+      active_users_text: "{count} đang hoạt động"
       discussions_heading: => core.ref.discussions
-      last_12_months_label: Last 12 months
-      last_28_days_label: Last 28 days
-      last_7_days_label: Last 7 days
+      last_12_months_label: 12 tháng gần nhất
+      last_28_days_label: 28 ngày gần nhất
+      last_7_days_label: 7 ngày gần nhất
       posts_heading: => core.ref.posts
-      today_label: Today
-      total_label: Total
+      today_label: Hôm nay
+      total_label: Tổng cộng
       users_heading: => core.ref.users
